--- a/AirBNB.ipynb
+++ b/AirBNB.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Dive Into Boston and Seattle Airbnb Data #"
    ]
-  }, 
+  },
   {
    "cell_type": "markdown",
    "metadata": {},
@@ -21,7 +21,8 @@
     "**Data Understanding**：Boston dataset consists of 6036 listings while Seattle's has 8494 listings. Datasets were investigated before any preprocessing.  \n",
     "**Prepare Data**: Including data cleaning, filling NAN value, one-hot encoding and MinMax preprocessing. Please refer to Preprocessing for detail.  \n",
     "**Data Modeling**: Used GridSearch with 5 folds validation to find best parameter for GradientBoostingRegressor. Some other models are trained and compared as well beforehand. Please refer to Training for detail.  \n",
-    "**Evaluate the Results**: Result and discussion are published in https://medium.com/ 
+    "**Evaluate the Results**: Result and discussion are published in https://medium.com/@shihaowen/dive-into-boston-and-seattle-airbnb-data-b4a9e79b740c. "
+   ]
   },
   {
    "cell_type": "code",
